# vielang

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  Cargo.toml  LICENSE.md  README.md  eslint.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts  tsconfig.json  unlighthouse.config.ts  velite.config.ts
crates/vl-actor/: Cargo.toml
crates/vl-actor/src/: actor_id.rs  actor_ref.rs  actor_system.rs  error.rs  lib.rs  mailbox.rs  strategy.rs  tests.rs
crates/vl-api/: Cargo.toml
crates/vl-api/src/: error.rs  main.rs  metrics.rs  openapi.rs  state.rs  telemetry.rs  util.rs
crates/vl-api/src/actors/: app_actor.rs  device_actor.rs  mod.rs  rule_chain_actor.rs  rule_node_actor.rs  tenant_actor.rs
crates/vl-api/src/bootstrap/: background.rs  infra.rs  mod.rs  queue.rs  services.rs  tasks.rs  transport.rs
crates/vl-api/src/middleware/: audit_log.rs  auth.rs  correlation_id.rs  metrics.rs  mod.rs  quota.rs  rate_limit.rs  security_headers.rs
crates/vl-api/src/notification/: mod.rs  template.rs
crates/vl-api/src/routes/: admin.rs  admin_analytics.rs  ai_model.rs  alarms.rs  api_keys.rs  asset_profiles.rs  assets.rs  audit.rs  auth.rs  backup.rs  billing.rs  calculated_fields.rs  cluster.rs  component_descriptor.rs  connectivity.rs  customers.rs  dashboards.rs  device_profiles.rs  devices.rs  domain.rs  edge_events.rs  edges.rs  entity_query.rs  entity_versions.rs  entity_views.rs  events.rs  geofence.rs  health.rs  housekeeper.rs  ldap.rs  lwm2m.rs  mail_config_template.rs  mobile.rs  mod.rs  notifications.rs  oauth2.rs  oauth2_templates.rs  ota.rs  partner.rs  queues.rs  (+22 more)
crates/vl-api/src/services/: activation_service.rs  activity.rs  arduino_compiler.rs  backup.rs  billing.rs  cluster_handler.rs  cluster_monitor.rs  cluster_routing.rs  dlq_handler.rs  edge_handler.rs  fcm_push.rs  housekeeper.rs  job_scheduler.rs  ldap_sync.rs  mod.rs  notification_delivery.rs  ota_service.rs  queue_consumer.rs  queue_monitor.rs  simulator.rs  stripe_service.rs  token_blacklist.rs  usage_tracker.rs  version_control.rs
crates/vl-api/src/ws/: handler.rs  mod.rs  session_registry.rs  subscription.rs
crates/vl-auth/: Cargo.toml
crates/vl-auth/src/: ldap.rs  lib.rs  oauth2.rs  password.rs  permission.rs  saml.rs  totp.rs
crates/vl-cache/: Cargo.toml
crates/vl-cache/src/: error.rs  factory.rs  keys.rs  lib.rs  local.rs  redis.rs  tests.rs  tiered.rs
crates/vl-cassandra/: Cargo.toml
crates/vl-cassandra/src/: cluster.rs  error.rs  lib.rs  partition.rs  schema.rs  ts_dao.rs
crates/vl-cassandra/tests/: integration_test.rs
crates/vl-cluster/: Cargo.toml  build.rs
crates/vl-cluster/proto/: edge.proto
crates/vl-cluster/src/: discovery.rs  error.rs  etcd_http.rs  lib.rs  manager.rs  node.rs  partition.rs  partitioner.rs  rpc.rs
crates/vl-cluster/src/edge/: downlink_sender.rs  grpc_server.rs  mod.rs  session.rs  uplink_processor.rs
crates/vl-cluster/src/raft/: leader.rs  mod.rs
crates/vl-dao/: Cargo.toml
crates/vl-dao/src/: error.rs  lib.rs  page.rs  timeseries.rs
crates/vl-dao/src/postgres/: activation_token.rs  admin_settings.rs  ai_model.rs  alarm.rs  analytics.rs  api_key.rs  api_usage.rs  asset.rs  asset_profile.rs  audit_log.rs  backup.rs  calculated_field.rs  cluster_node.rs  cluster_partition.rs  component_descriptor.rs  customer.rs  dashboard.rs  device.rs  device_activity.rs  device_profile.rs  device_template.rs  dlq.rs  domain.rs  edge.rs  entity_alarm.rs  entity_query.rs  entity_version.rs  entity_view.rs  event.rs  geofence.rs  housekeeper.rs  kv.rs  ldap_config.rs  mobile_app.rs  mobile_session.rs  mod.rs  notification_channel_settings.rs  notification_delivery.rs  notification_inbox.rs  notification_request.rs  (+30 more)
crates/vl-dao/tests/: admin_settings_dao.rs  alarm_dao.rs  api_key_dao.rs  asset_dao.rs  asset_profile_dao.rs  audit_log_dao.rs  constraint_tests.rs  customer_dao.rs  dashboard_dao.rs  device_activity_test.rs  device_dao.rs  device_profile_dao.rs  edge_dao.rs  entity_version_dao.rs  entity_view_dao.rs  event_dao.rs  notification_template_dao.rs  ota_package_dao.rs  relation_dao.rs  resource_dao.rs  rpc_dao.rs  rule_chain_dao.rs  scheduled_job_dao.rs  tenant_dao.rs  tenant_profile_dao.rs  user_dao.rs  widget_dao.rs
crates/vl-dao/tests/helpers/: mod.rs
crates/vl-digital-twin/: Cargo.toml
crates/vl-digital-twin/src/: config.rs  lib.rs  main.rs  playback.rs
crates/vl-digital-twin/src/aas/: mod.rs  nameplate.rs  shell.rs  submodel.rs
crates/vl-digital-twin/src/alarm/: mod.rs  rules.rs
crates/vl-digital-twin/src/analytics/: cusum.rs  detector.rs  isolation_forest.rs  mod.rs  stats.rs
crates/vl-digital-twin/src/annotations/: mod.rs
crates/vl-digital-twin/src/api/: client.rs  mod.rs
crates/vl-digital-twin/src/asset_hierarchy/: asset_node.rs  mod.rs
crates/vl-digital-twin/src/assets/: mod.rs  model_registry.rs
crates/vl-digital-twin/src/auth/: audit_log.rs  mod.rs  session.rs
crates/vl-digital-twin/src/automation/: action.rs  mod.rs  workflow.rs
crates/vl-digital-twin/src/components/: device.rs  mod.rs
crates/vl-digital-twin/src/dashboard/: editor.rs  layout.rs  mod.rs  renderer.rs  widget.rs
crates/vl-digital-twin/src/data_source/: mod.rs
crates/vl-digital-twin/src/dtdl/: instance.rs  mod.rs  model.rs  parser.rs  registry.rs
crates/vl-digital-twin/src/events/: mod.rs
crates/vl-digital-twin/src/plugin/: mod.rs  (+1 more)
crates/vl-digital-twin/www/: index.html  style.css
crates/vl-queue/: Cargo.toml
crates/vl-queue/src/: error.rs  factory.rs  lib.rs  message.rs  persistent.rs  tests.rs  topics.rs
crates/vl-rule-engine/: Cargo.toml
crates/vl-rule-engine/src/: chain.rs  debug_settings.rs  engine.rs  error.rs  lib.rs  node.rs  registry.rs  script.rs  tenant_registry.rs
crates/vl-seed/: Cargo.toml
crates/vl-seed/src/: main.rs  pg_to_cassandra.rs  replay.rs
crates/vl-transport/: Cargo.toml
crates/vl-transport/src/: auth.rs  error.rs  lib.rs
crates/vl-transport/tests/: lwm2m_senml.rs  mqtt_integration.rs  mqtt_qos2.rs
(+1194 files in other folders)
