[package]
name = "vl-auth"
version.workspace = true
edition.workspace = true

[dependencies]
vl-core      = { workspace = true }
serde        = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
jsonwebtoken = { workspace = true }
argon2       = { workspace = true }
uuid         = { workspace = true }
rand         = { workspace = true }
rand_core    = { version = "0.6", features = ["getrandom"] }  # must match password-hash 0.5 / argon2 0.5
sha2         = { workspace = true }
totp-rs      = { workspace = true }
reqwest      = { workspace = true }
serde_json   = { workspace = true }
ldap3        = { workspace = true }
base64       = { workspace = true }
flate2       = { workspace = true }
quick-xml    = { workspace = true }
chrono       = { workspace = true }
