[package]
name = "vl-cache"
version.workspace = true
edition.workspace = true

[features]
default = []
redis = ["dep:fred"]

[dependencies]
vl-config   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
moka        = { workspace = true }
bytes       = { workspace = true }
uuid        = { workspace = true }

fred = { workspace = true, optional = true }
