[package]
name = "vl-transport"
version.workspace = true
edition.workspace = true

[features]
default = ["http"]
http = ["dep:axum"]

[dependencies]
vl-core    = { workspace = true }
vl-config  = { workspace = true }
vl-dao     = { workspace = true }
vl-queue   = { workspace = true }
vl-cache   = { workspace = true }

metrics    = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
bytes      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
dashmap    = { workspace = true }

mqttbytes  = { workspace = true }
rumqttc    = { workspace = true }
base64     = { workspace = true }
anyhow     = { workspace = true }
x509-cert  = { workspace = true }

axum              = { workspace = true, optional = true }
coap-lite         = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }

[dev-dependencies]
sqlx   = { workspace = true }
tokio  = { workspace = true }
